fix: hide scrollbar and change table style

--- a/css/main.css
+++ b/css/main.css
@@ -5,28 +5,33 @@
 
 td:nth-child(1) {
     text-align: right;
-    width: 20%;
+    width: 100%;
+    display: block;
+    font-weight: bold;
 }
 td:nth-child(2) {
     text-align: left;
-    width: 80%;
+    width: 100%;
+    display: block;
 }
 
 @media (min-width: 1200px) {
     td:nth-child(1) {
         width: 40%;
+        display: table-cell;
     }
     td:nth-child(2) {
         width: 60%;
+        display: table-cell;
     }
-    
+
 }
 
 .skills-table {
     margin-left: auto;
     margin-right: auto;
     border-collapse: separate;
-    border-spacing: 50px 10px;
+    border-spacing: 50px 20px;
 }
 
 .skills-table {
